<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="hello">Hello World, V2DemoActivity!</string>
    <string name="app_name">V2Demo</string>

    <!-- Task start stop sample -->
    <string name="btnStartTaskA">Start Task A</string>
    <string name="btnStartTaskB">Start Task B</string>
    <string name="btnStopTaskA">Stop Task A</string>
    <string name="btnStopTaskB">Stop Task B</string>

    <!-- Dialogs sample -->
    <string name="btnPickTime">Change time</string>

    <!-- Tricks -->
    <string name="labelData">Enable data access over Mobile Network</string>
    <string name="btn_dump_statistics">Dump traffic statistics to logcat</string>

    <!-- Camera -->
    <string name="menu_take_photo">PHOTO</string>
    <string name="menu_take_video">VIDEO</string>
    <string name="sync_register_account">REGISTER</string>
    <string name="sync_delete_account">DELETE ACCOUNT</string>
    <string name="sync_start">START SYNC</string>
    <string name="sync_cancel">CANCEL SYNC</string>
    <string name="account_key_name">Account Name</string>
    <string name="account_key_name_email">Type your e-mail here</string>
    <string name="title_fmt">V2 Demo accounts</string>
    <string name="sync_start60">SYNC 60 Sec</string>
    <string name="sync_start40">SYNC 40 Sec</string>
    <string name="sync_auto">AUTO SYNC</string>
    <string name="sync_now">SYNC NOW</string>
    <string name="button_open_remote_pdf">Open remote PDF</string>
    <string name="title_select_PDF_application">Choose PDF viewer application</string>
    <string name="error_cant_open">Can\'t find application for that file</string>
    <string name="button_open_local_pdf">Open local PDF</string>
    <string name="title_downloading_document">Downloading...</string>
    <string name="btn_check_gps">Check GPS state</string>
    <string name="button_clear">Clear</string>
    <string name="button_start">Start Audio streaming</string>
    <string name="button_stop_streaming">Stop streaming</string>

</resources>