<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical" >

    <Button
        android:id="@+id/btnStartTaskA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStartTaskA" />

    <Button
        android:id="@+id/btnStartTaskB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStartTaskB" />

    <Button
        android:id="@+id/btnStopTaskA"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStopTaskA" />

    <Button
        android:id="@+id/btnStopTaskB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnStopTaskB" />

    <TextView
        android:id="@+id/txtData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" />

</LinearLayout>